[metadata]
name = pyranges_plot
version = attr: pyranges_plot._version.__version__
author = Ester Muñoz del Campo, Marco Mariotti
author_email = ester.munoz01@estudiant.upf.edu, marco.mariotti@ub.edu
description = 'Gene visualization package for dataframe objects generated with PyRanges.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emunozdc/pyranges_plot.git
project_urls =
https://github.com/emunozdc/pyranges_plot
    Github Website=https://github.com/emunozdc/pyranges_plot

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires = 
    pyranges1 >= 1.0.0
    intervaltree >= 3.1.0
    kaleido >= 0.2.1

[options.extras_require]
plt =
    matplotlib >= 3.7.2
    mplcursors >= 0.5.2
plotly =
    plotly >= 5.9.0
    dash >= 2.14.0
    dash_bootstrap_components >= 1.5.0
all =
    matplotlib >= 3.7.2
    mplcursors >= 0.5.2
    plotly >= 5.9.0
    dash >= 2.14.0
    dash_bootstrap_components >= 1.5.0

[options.packages.find]
where = src

[tool.ruff]
max-line-length = 120
